--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-    "name": "orion-backend",
-    "version": "1.0.0",
-    "description": "Backend para la extensión Orion, con integración a GPT-4.1 Mini",
-    "main": "server.js",
-    "scripts": {
-      "start": "node server.js"
-    },
-    "dependencies": {
-      "cors": "^2.8.5",
-      "dotenv": "^16.0.3",
-      "express": "^4.18.2",
-      "openai": "^4.16.1"
-    }
+  "name": "orion-backend",
+  "version": "1.0.0",
+  "description": "Backend para la extensión Orion, con integración a GPT-4.1 Mini",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "openai": "^4.16.1"
   }
-  
+}
