--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.1.5",
+    "express-session": "^1.18.1",
     "openai": "^4.16.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
